themes/default/header.scss
// @-webkit-keyframes glow {
//   from { transform: scale3d(1, 1, 1); box-shadow: 0 0 1.5em rgba(89, 159, 198, .25); }
//   50% { transform: scale3d(1.15, 1.15, 1); box-shadow: 0 0 1.25em rgba(89, 159, 198, .5); }
//   to { transform: scale3d(1, 1, 1); box-shadow: 0 0 1.5em rgba(89, 159, 198, .25); }
// }

@keyframes pulse {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes beat {
  from { transform: scale3d(1, 1, 1); }
  40% { transform: scale3d(1.2, 1.2, 1); }
  60% { transform: scale3d(1, 1, 1); }
  80% { transform: scale3d(1.1, 1.1, 1); }
  to { transform: scale3d(1, 1, 1); }
}

@-webkit-keyframes caret {
  from { top: 0; opacity: .25; }
  50% { top: 10px; opacity: .85; }
  to { top: 90%; opacity: .25; }
}

.header.container .slider .slider-frame .slider-list .slider-slide {
  min-height: 96vh !important;
}

.nav-open .header.container .slide .hero {
  @media (min-width: 768px) {
    filter: blur(10px);
  }
}

.header.container {
  width: 100%;
  min-height: 96vh;

  .home.page & {
    box-shadow: 0 0 20px #000;
  }

  .slider {
    > div:last-of-type {
      display: none;
    }
  }
}

.slide {
  display: block !important;

  &.animating {
    h1, h2, .preview, .flippers button {
      opacity: 0;
      transform: translate3d(-200vw, 0, 0);
    }
  }

  .flippers {
    margin-top: -15px;

    button {
      color: $humility !important;

      &:hover {
        background: $primary-green-color !important;
        color: $background-color !important;
      }

      i {
        font-size: 1.5em;
        line-height: 2;
      }
    }
  }

  .hero {
    opacity: 0;
    position: absolute !important;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    transition: opacity .75s;

    &.current,
    &.previous {
      transition: opacity .75s;
    }

    &.current {
      opacity: .35 !important;
    }
  }

  .instruction {
    font-size: .9em;
  }

  .logo {
    margin: 0 auto;
    position: absolute !important;
    top: 0;
    width: 100%;
    z-index: 2;
    opacity: 0;
    transform: scale3d(1.1, 1.1, 1);
    transition: opacity .35s, transform .35s;
  }

  h1, h2, .preview, .flippers button {
    transition: opacity .05s, transform .45s;
  }

  > div:last-of-type {
    position: absolute;
    width: 100%;
    bottom: 30%;
    transform: translate(0, 50%);
  }

  button {
    font-family: $font-family-brand;
  }

  button.flip {
    z-index: 2;
    line-height: 2.5em;
    box-shadow: 1px 1px 2px #000;
    font-size: .85em;
    padding: 0 1em;
    margin: .5em .65em 0 .15em;
    outline: none;
    border: none;
    background: $black-color;
    position: relative;
    color: $primary-yellow-color;
    border-radius: 0;

    &:hover {
      transition: none;
      background: $primary-yellow-color;
      color: $background-color;
    }

    &:before {
      position: absolute;
      white-space: nowrap;
      color: $white-color;
      background: rgba(21, 21, 21, .75);
      border-radius: .25em;
      padding: 0 .5em;
      margin: -.75em .5em .5em;
      font-size: 1em;
      line-height: 1.5em;
      top: 50%;
      border: solid 1px rgba(21, 21, 21, 1);
      opacity: .9;
      font-family: $font-family-fjalla;
    }

    &.left {
      &:before {
        content: attr(data-section);
        right: 100%;
      }
    }

    &.right {
      &:before {
        content: attr(data-section);
        left: 100%;
      }
    }

    &[disabled] {
      color: $humility;
      background: $black-color;
      opacity: .20;
      -webkit-animation-name: none;
    }
  }

  h1, h2 {
    width: 90%;
    max-width: 610px;
    position: relative;
    text-shadow: 1px 1px 3px $black-color;
    text-transform: uppercase;
    font-family: $font-family-fjalla;
    line-height: 1;
    margin: 0 auto 10px;
    text-align: left;
    font-weight: 600;
    z-index: 2;
    pointer-events:none;

    &.text-right {
      text-align: right;
    }
  }

  h1 {
    color: $white-color;
    font-size: 2em;
    z-index: 3;
  }

  h2 {
    color: #FCD700;
    font-size: 3.5em;
    margin-bottom: 15px;
  }

  .preview {
    color: #efefef;
    font-size: 1em;
    margin: 0 auto;
    width: 90%;
    max-width: 620px;
    text-align: center;
    padding: 15px 10px;
    position: relative;
    z-index: 1;

    &:after {
      content: '';
      position: absolute;
      height: 120%;
      width: 100%;
      background: linear-gradient(rgba(89, 159, 198, 0.5), rgba(21, 21, 21, 0));
      top: 0;
      left: 0;
      margin: 0;
      border-top: solid 2px rgba(89, 159, 198, .65);
      box-shadow: 0 -5px 10px rgba(41, 41, 41, 0.25);
      border-radius: 2px;
    }

    > div {
      position: absolute;
      width: 100%;
      top: 0;
      left: 0;
      height: 3px;
      border-radius: 2px;
      z-index: 2;
      background: rgba(89, 159, 198, 1);
      margin: 2px;
      box-shadow: 5px 1px 5px rgba(41, 41, 41, .5);
      transition: transform .2s;
      will-change: transform;
      transform-origin: left;
      transform: scale3d(0, 1, 1);
    }

    p {
      font-size: 1.25em;
      color: #fff;
      line-height: 1.3;
      text-align: left;
      position: relative;
      z-index: 2;
      text-shadow: 1px 1px 3px $black-color;
    }

    button {
      position: absolute;
      right: 0;
      top: 100%;
      margin: -10px 0;
      color: #fff;
      text-shadow: 1px 1px 3px $black-color;
      background: $primary-green-color;
      box-shadow: 0px 0px 10px $black-color;
      font-family: $font-family-fjalla;
      text-transform: uppercase;
      outline: none;
      border: none;
      border-radius: 50%;
      display: block;
      width: 4.25em;
      height: 4.25em;
      z-index: 1;
      font-size: 1.5em;
      line-height: 1.1;
      text-align: center;
      opacity: .9;
      transition: all .15s ease-in;
      transform: scale3d(.9, .9, 1);

      &:hover {
        opacity: 1;
        transform: scale3d(1.1, 1.1, 1);
      }

      > span {
        font-size: .9;
        display: block;
        margin-top: -.5em;
        position: relative;
        z-index: 2;

        span {
          color: $black-color;
          text-shadow: none;
          font-weight: 600;
        }
      }

      i {
        z-index: 1;
        position: absolute;
        top: 70%;
        left: 65%;
        font-size: 2.5em;
        transform: translate(-35%, -30%);
        opacity: .65;

        &.loading {
          animation-name: pulse;
          animation-iteration-count: infinite;
          animation-duration: .25s;
          animation-timing-function: linear;
        }
      }
    }
  }

  .scroll {
    width: 100%;
    text-align: center;
    margin-top: 1.25em;

    span {
      display: block;
      font-size: 11px;
      margin-bottom: 20px;
      letter-spacing: 1;
    }

    button {
      border-radius: 50%;
      border: none;
      width: 42px;
      height: 40px;
      background: transparent;
      position: relative;
      outline: none;
      cursor: pointer;
      overflow: hidden;

      &[disabled] {
        visibility: hidden;
      }
    }

    button span {
      border-left: solid 2px #f8f8f8;
      border-bottom: solid 2px #f8f8f8;
      transform: rotate(-45deg);
      display: block;
      width: 1em;
      height: 1em;
      position: absolute;
      top: 0;
      left: 15px;
      -webkit-animation-name: caret;
      -webkit-animation-duration: 1.5s;
      -webkit-animation-iteration-count: infinite;
    }

    button:hover span {
      border-left: solid 2px $background-color;
      border-bottom: solid 2px $background-color;
    }
  }
}

.no-js .header.container {
  .slide {
    .logo, h1, h2, .preview, .flippers button {
      transition: none;
    }
  }
}

.no-js .home.page .header.container {
  &:before {
    content: ' ';
    display: table;
    position: absolute;
    width: 200px;
    height: 200px;
    top: 50%;
    left: 50%;
    margin-left: -100px;
    margin-top: -100px;
    background: transparent url(https://d3w33imimg0eu8.cloudfront.net/images/logo.png) center no-repeat;
    background-size: 100%;
    animation-name: beat;
    animation-iteration-count: infinite;
    animation-duration: .75s;
    animation-timing-function: linear;
    transform-origin: 0;
  }

  .hero {
    display: none;
  }
}

.nav-loaded .header.container {
  .logo {
    opacity: 1;
    transform: scale3d(1, 1, 1);
  }
}

.about.page .header.container .logo {
  opacity: 1 !important;
  transform: scale3d(1, 1, 1) !important;
  transition: none !important;
}

